test/sema/void-pointer-comparison.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void f(void* a, void* b) {
    // CHECK: [[@LINE+1]]:11: error: no matching operator '==' with arguments 'void*' and 'void*'
    _ = a == b;
}
